--- a/src/assets/scss/components/_media.scss
+++ b/src/assets/scss/components/_media.scss
@@ -1,108 +1,57 @@
-@media (max-width: 765px) {
-  .card-active {
-    margin-bottom: 145px;
+@media (max-width: 510px) {
+  .todo-section {
+    position: absolute;
+    top: 90px;
   }
-}
-@media (max-width: 630px) {
-  .setting-header-head {
-    font-size: 20px;
-    line-height: 25px;
+  .toDo__task-del {
+    width: 12px;
+    height: 12px;
   }
-  .menu-head {
-    font-size: 11px;
-    line-height: 14px;
-    letter-spacing: 4.23077px;
+  .toDo__task-text {
+    max-width: 350px;
   }
-  .setting-menu {
-    padding: 24px;
+  .toDo__checkbox .toDo__checkbox-div {
+    height: 20px;
+    width: 20px;
   }
-  .minutes-choosing {
-    flex-direction: column;
-    gap: 8px;
+  .toDo__checkbox-div__innner {
+    height: 18.5px;
+    width: 18.5px;
   }
-  .menu-choice {
+  .hide {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .input-val {
-    padding: 15px 15px 11px;
-  }
-  .btns {
-    top: 12px;
-  }
-  .menu-font {
-    flex-direction: column;
-  }
-  .menu-font__head {
-    margin-bottom: 18px;
-  }
-  .menu-color {
-    flex-direction: column;
-    margin-bottom: 35px;
-  }
-  .menu-color__head {
-    margin-bottom: 18px;
-  }
-  .setting__apply {
-    left: 140px;
-  }
-  .setting__btn-apply {
-    padding: 17px 46px 20px;
-  }
-}
-@media (max-width: 500px) {
-  .active-wrapper-one {
-    width: 300px;
-    height: 300px;
-  }
-  .active-wrapper-second {
-    width: 267.8px;
-    height: 267.8px;
-  }
-  .progress-bar {
-    width: 248.05px;
-    height: 248.05px;
-  }
-  .progress-bar-inner {
-    width: 238.05px;
-    height: 238.05px;
-  }
-  .progress-value {
-    font-size: 80px;
-    line-height: 99px;
-    letter-spacing: -4px;
-  }
+    justify-content: center;
 
-  .card-header {
-    .card-header-buttons {
-      gap: 5;
+    .toDo-folders-all {
+      font-size: 14px;
+      line-height: 14px;
+      margin-top: 8px;
     }
   }
-  .btn {
-    padding: 5px;
-  }
-  .btn.active {
-    padding: 18px 23px;
-  }
-  .header__btn {
-    font-size: 12px;
-    line-height: 18px;
-  }
-  .btn-remote {
-    font-size: 14px;
-    line-height: 17px;
-    letter-spacing: 13.125px;
-  }
-  .setting__apply {
-    left: 80px;
-  }
 }
-@media (max-width: 374px) {
-  .main {
-    padding: 30px 5px 40px;
+@media (max-width: 400px) {
+  body {
+    font-size: 12px;
+    line-height: 12px;
+    letter-spacing: -0.166667px;
   }
-  .progress-value {
-    font-size: 80px;
+  .toDo__list > :not(:last-child) {
+    margin-bottom: 0px;
+  }
+  .header-title {
+    font-size: 28px;
+    line-height: 23px;
+    letter-spacing: 10px;
+  }
+  .toDo__checkbox .toDo__checkbox-div {
+    margin-right: 12px;
+  }
+  .toDo__task {
+    padding: 20px 20px;
+    font-size: 12px;
+  }
+  .toDo-tasks {
+    padding: 0;
+    padding-bottom: 10px;
   }
 }
