--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -68,12 +68,16 @@
     color: #393a4b;
   }
 }
-.dark .toDo__add{
+.dark .toDo__add {
   border: 1px solid #393a4b;
 }
 .toDo__task_complete .toDo__task-text {
   text-decoration: line-through;
   opacity: 0.5;
+}
+.dark .toDo__task_complete .toDo__task-text {
+  color: #4d5067;
+  opacity: 1;
 }
 .toDo-new__input {
   padding: 23px 72px;
@@ -91,13 +95,13 @@
 .toDo__list > *:not(:last-child) {
   margin-bottom: 8px;
 }
-.toDo__list {
+.toDo-tasks {
   padding: 20px 0 16px;
   background: #ffffff;
   box-shadow: 0px 35px 50px -15px rgba(194, 195, 214, 0.5);
   border-radius: 5px;
 }
-.dark .toDo__list {
+.dark .toDo-tasks {
   background: #25273d;
   box-shadow: 0px 35px 50px -15px rgba(0, 0, 0, 0.5);
   border: 1px solid transparent;
@@ -112,11 +116,8 @@
 .dark .toDo__task {
   border-bottom: 1px solid #393a4b;
 }
-.toDo__task-del {
-  // position: absolute;
-  // right: -200px;
-}
-.toDo__task:hover .toDo__task-del {
+
+.toDo__task:hover .toDo__task-del__img {
   display: block;
 }
 .toDo__checkbox input {
@@ -182,38 +183,122 @@
   background: #25273d;
 }
 .toDo__checkbox div::after {
-  content: '\2713';
+  content: '';
   display: none;
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
+  background: url('../images/checkmark.svg') center no-repeat;
 }
 .toDo__task-del {
-  display: none;
   margin-left: auto;
   margin-right: 0;
+  cursor: pointer;
+  width: 20px;
+  height: 18px;
 }
-.toDo__task_complete {
+.toDo__task-del__img {
+  display: none;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .toDo__checkbox {
   display: inline-block;
 }
-.toDo__checkbox-div {
-}
+
 .toDo__task-text {
   max-width: 470px;
+  margin-right: 10px;
   &:hover {
     cursor: pointer;
   }
-}
-.toDo__task-del {
-  cursor: pointer;
 }
 
 .toDo-tasks__menu {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 16px 24px 4px;
 }
+.toDo-count {
+  font-size: 14px;
+  line-height: 14px;
+  letter-spacing: -0.194444px;
+  color: $color-category-day;
+}
+.dark .toDo-count {
+  color: #5b5e7e;
+}
+.toDo-clear__btn {
+  font-size: 14px;
+  line-height: 14px;
+  letter-spacing: -0.194444px;
+  color: $color-category-day;
+  transition: all 0.7s;
+  padding: 5px;
+  &:hover {
+    color: #494c6b;
+  }
+}
+.dark .toDo-clear__btn {
+  color: #5b5e7e;
+  &:hover {
+    color: #e3e4f1;
+  }
+}
+.toDo-folders {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 14px;
+  letter-spacing: -0.194444px;
+  color: $color-category-day;
+}
+.toDo-folders-all {
+  transition: all 0.7s;
+  padding: 5px;
+  &:hover {
+    color: #494c6b;
+  }
+  &:not(:last-child) {
+    margin-right: 5px;
+  }
+}
+.dark .all,
+.all {
+  color: #3a7cfd;
+}
+.dark .toDo-folders-all:not(:first-child) {
+  color: #5b5e7e;
+  &:hover {
+    color: #e3e4f1;
+  }
+}
+
+.toDo-copyright {
+  display: flex;
+  justify-content: center;
+  padding: 50px 0;
+  font-size: 14px;
+  line-height: 14px;
+  letter-spacing: -0.194444px;
+  color: #9495a5;
+  cursor: default;
+}
+.dark .toDo-copyright {
+  color: #5b5e7e;
+}
+.hide {
+  // display: block;
+  height: 60px;
+  background: #fff;
+  box-shadow: 0 35px 50px -15px rgba(194, 195, 214, 0.5);
+  border-radius: 5px;
+  border: 1px solid #fff;
+  width: 100%;
+  margin: 16px 0;
+}
+
+@import './components/media';
